--- a/signup.html
+++ b/signup.html
@@ -23,7 +23,7 @@
       <p>Sign Up to Get Started</p>
 
       <form action="http://localhost:3000/signup" method="POST">
-        <input type="text" name="full_name" placeholder="Full Name" required />
+        <input type="name" name="full_name" placeholder="Full Name" required />
         <input type="email" name="email" placeholder="Email Address" required />
         <input type="password" name="password" placeholder="Password" required />
         <button type="submit">Register</button>
