--- a/vocabulary.html
+++ b/vocabulary.html
@@ -283,6 +283,7 @@
         <td colspan="6" style="text-align: left; padding: 10px;">
           <button class="study-sub-btn">📘 매일 테스트</button>
           <button class="study-sub-btn">🎮 단어 게임</button>
+          <button class="study-sub-btn">체크리스트 추가</button>
         </td>
       `;
       row.after(studyRow);
